Add kirkstone compatibility

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-healthpi = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-healthpi = "6"
 
 LAYERDEPENDS_meta-healthpi = "core"
-LAYERSERIES_COMPAT_meta-healthpi = "honister"
+LAYERSERIES_COMPAT_meta-healthpi = "honister kirkstone"
